<resources>
    <string name="app_name">Sudoku</string>
    <string name="start_game_text">Start Game</string>
    <string name="check_puzzle_text">Check puzzle</string>
    <string name="new_puzzle_button">New puzzle</string>
    <string name="puzzle_not_solved_dialog_ok">OK</string>
    <string name="puzzle_solved_dialog_ok">YES</string>
    <string name="puzzle_solved_dialog_title">Puzzled solved!</string>
    <string name="puzzle_solved_question">Do you want to generate new puzzle?</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="puzzle_not_solved_dialog_title">Puzzle not solved! Try again</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="easy_difficulty_mode_text">EASY</string>
    <string name="medium_difficulty_mode_text">MEDIUM</string>
    <string name="hard_difficulty_mode_text">HARD</string>
    <string name="random_difficulty_mode_text">RANDOM</string>
    <string name="quit_app_question">Are you sure you want to quit?</string>
</resources>