<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sudokuBackground"
    tools:context=".view.game.activity.SudokuActivity">

    <Button
        android:id="@+id/check_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_puzzle_text"
        app:layout_constraintBottom_toTopOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/generate_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_puzzle_button"
        app:layout_constraintBottom_toTopOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sudoku_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sudoku_board_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.45"/>

</androidx.constraintlayout.widget.ConstraintLayout>